data/derived/fa15/progs/unify/prog2925.ml.out
Characters 113-128:
  let seen' = if not(List.mem seen) then h::seen else seen in
                    ^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> bool
       but an expression was expected of type bool
